[package]
name = "dca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
ogg = "0.9.0"
songbird = { version = "0.3.2", features = ["driver"]}
clap = "4.2.4"

[dependencies.tokio]
version = "1.0"
features = ["full"]